Bug 406751 - Time relations become forgotten in Dynamic Playlist rules
Summary: Time relations become forgotten in Dynamic Playlist rules
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlists/Dynamic Playlists (other bugs)
Version First Reported In: 2.9.0
Platform: Other Linux
: NOR normal
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-22 03:10 UTC by Gary Kenneth Krueger
Modified: 2024-05-06 15:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gary Kenneth Krueger 2019-04-22 03:10:37 UTC
SUMMARY
Time relations become forgotten in Dynamic Playlist rules.

STEPS TO REPRODUCE
1. Create a time related dynamic playlist rule (for example:  Modified newer than 600 days)
2. Save the rule.
3. Try to go back in to edit the rule.

By the way, if you don't go back in to edit the rule, the relation will be forgotten anyhow when you quit and restart Amarok.

OBSERVED RESULT
Observe that the playlist rule forgets "newer than", and now shows "on" as the relation.

EXPECTED RESULT
The playlist rule continues to show "newer than" (or the chosen relation) regardless of re-editing the rule or restarting Amarok.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Connected to local mysql database.
Comment 1 Gary Kenneth Krueger 2019-04-22 03:26:15 UTC
By the way, it is running on Ubuntu Bionic Beaver 18.04.2 LTS.

libqtcore4/bionic,now 4:4.8.7+dfsg-7ubuntu1 amd64 [installed,automatic]
  Qt 4 core module
libqtgui4/bionic,now 4:4.8.7+dfsg-7ubuntu1 amd64 [installed,automatic]
  Qt 4 GUI module
libqt5gui5/bionic-updates,now 5.9.5+dfsg-0ubuntu2 amd64 [installed,automatic]
  Qt 5 GUI module
Comment 2 Bug Janitor Service 2024-05-05 21:51:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/amarok/-/merge_requests/94
Comment 3 Tuomas Nurmi 2024-05-06 15:14:58 UTC
Git commit 4c60c7c92eac4b22c834f326471d9cbb2f8814b3 by Tuomas Nurmi.
Committed on 06/05/2024 at 15:14.
Pushed by nurmi into branch 'master'.

Add missing handling of newer dates in TagMatchBias

M  +9    -0    src/dynamic/biases/TagMatchBias.cpp
M  +4    -0    src/playlistgenerator/constraints/TagMatchComparer.cpp

https://invent.kde.org/multimedia/amarok/-/commit/4c60c7c92eac4b22c834f326471d9cbb2f8814b3