Add missing handling of newer dates in TagMatchBias

BUG: 406751